# game-of-life

./: README.md
c/: .gitignore  CMakeLists.txt
c/cmake/: FetchCGLM.cmake  FetchCMocka.cmake  FetchGLEW.cmake  FetchGLFW.cmake  FindCheck.cmake
c/src/: CMakeLists.txt  helpers.c  helpers.h  main.c  main_console.c  main_gl.c  runner.c  runner.h
c/src/game/: game.c  game.h
c/src/io/: file_reader.c  file_reader.h  reader_factory.c  reader_factory.h  rle_reader.c  rle_reader.h  text_reader.c  text_reader.h
c/src/ui/: console.c  console.h  gl.c  gl.h  visualizer.c  visualizer.h
c/src/ui/console/: console.c  console.h
c/src/ui/gl/: gl.c  gl.h
c/src/ui/gl/shaders/: SimpleFragmentShader.frag  SimpleVertexShader.vert  shaders.c  shaders.h
c/tests/: CMakeLists.txt  test_main.c  tests.h
c/tests/game/: check_game.c  test_game.c
patterns/: pulsar.txt
